cmd/cli/kubectl-kyverno/pr/resource1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: same-name-but-diff-namespace
  labels:
    foo: bar
  namespace: testing
spec:
  containers:
  - name: nginx
    image: nginx:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
